# MindVault

./: .gitignore
backend/: .env  .env.example  .gitignore  pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py  schemas.py
backend/app/core/: config.py
backend/app/rag/: chunking.py  embeddings.py  llm.py  loaders.py  pipeline.py  prompting.py  vector_store.py
